--- a/Especificação para inclusão dos dados de crescimento da criança.yaml
+++ b/Especificação para inclusão dos dados de crescimento da criança.yaml
@@ -8,9 +8,7 @@ info:
 servers:
   - url: /
 security:
-  - application:
-      - read
-      - write
+  - BearerAuth: []
 paths:
   /progress:
     get:
@@ -263,3 +261,8 @@ components:
           enum:
             - M
             - F
+  securitySchemes:                               
+    BearerAuth:
+      type: http
+      scheme: bearer  
+      bearerFormat: JWT             
